fixed an overflow bug for screen width 340px

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -409,7 +409,7 @@
 
 
   .project-overlay-description {
-    //overflow: scroll;
+    overflow: scroll;
 
     p {
       line-height: 1rem;
